--- a/flowcss/mostrecent.css
+++ b/flowcss/mostrecent.css
@@ -1,4 +1,4 @@
-@import url("http://micahlindley.com/cdn/flowcss/Colaborate-Regular.css");
-body {
-  font-family: 'Colaborate-Regular', sans-serif;
+@font-face {
+  font-family: "Colaborate";
+  src: url("../fonts/mainfont.woff");
 }
